#74 - Added tests case [skip ci]